@@ -32,8 +32,10 @@ emc2 (1:2.2.2~cvs) unstable; urgency=low
   * fix stepconf 'pin 'motion.spindle-speed-in' was already linked' for
     machines with spindle speed control and spindle feedback
   * fix stepconf: don't allow arbitrary text to be entered in comboboxes
+  * fix stepconf: coolant pins
+  * stepconf: add parker oem750 timings
 
- -- Jeff Epler <jepler@unpythonic.net>  Sat,  1 Dec 2007 09:46:53 -0600
+ -- Jeff Epler <jepler@unpythonic.net>  Sat,  1 Dec 2007 12:19:14 -0600
 
 emc2 (1:2.2.1) unstable; urgency=low
 
